--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,31 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-# RustRover
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+.*
+# dunno if necessary, better safe then sorry(below)
+!.git*
+
+*.ko
+*.mod
+*.mod.c
+*.o
+*.rmeta
+Module.symvers
+modules.order
+rust-project.json
+
+kernel/
+kernel-build/
